# WOPR_TUI_2026

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  test.txt
src/: app.rs  config.rs  event.rs  main.rs  mode.rs  state.rs  terminal.rs  view.rs
src/game/: consequence.rs  context.rs  endgame.rs  events.rs  prompts.rs  types.rs
src/llm/: anthropic.rs  mod.rs  stub.rs
src/ui/: about.rs  comms_panel.rs  country_select.rs  layout.rs  loading.rs  mod.rs  splash.rs  world_map.rs
