[package]
name = "wopr-tui-2026"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wopr-2026"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
unicode-width = "0.2"
futures = "0.3"
tokio-stream = "0.1"
